# cuda-particle-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: Simulation.cuh  particle.hpp
src/: init.cpp  integrator.cu  main.cpp  main.cu  sim.cu
